heat: Add a jlink test